--- a/fuwlol.html
+++ b/fuwlol.html
@@ -6,7 +6,7 @@
 	<body>
 		<text>this link will redirect you to </text>
 		<a href="http://nixvix.ai">Nixense Vixion</a>
-	        <img src="/home/usm/Music/1_20200314183051.png" alt="Nixense Vixion" width="200" height="80">
+	        <img src="1_20200314183051.png" alt="Nixense Vixion" width="200" height="80">
 	</body>
 
 
